Calculadora em JAVA com netbeans

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 /netbeans/Aluno/nbproject/private/
 /netbeans/Aluno/build/
+/netbeans/Calculadora/nbproject/private/
+/netbeans/Calculadora/dist/
+/netbeans/Calculadora/build/
+/netbeans/Calculo/target/
